<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="@color/blue"
              android:layout_alignParentTop="true"
              android:layout_height="wrap_content">
    <!--header-->
    <RelativeLayout android:layout_width="fill_parent"
                  android:layout_height="50dp">
        <TextView android:layout_width="wrap_content"
                  android:text="@string/icon_menu"
                  android:id="@+id/header_menu"
                  android:textColor="@color/white"
                  android:textSize="35dp"
                  android:background="@drawable/icon_selector"
                  android:padding="10dp"
                  android:layout_height="wrap_content"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/midie"
                  android:paddingTop="10dp"
                  android:layout_toRightOf="@id/header_menu"
                  android:textSize="22dp"
                  android:layout_marginLeft="20dp"
                  android:textColor="@color/white"
        />
        <TextView android:layout_width="wrap_content"
                  android:text="@string/icon_msg"
                  android:textSize="24dp"
                  android:id="@+id/msg"
                  android:layout_alignParentRight="true"
                  android:gravity="end"
                  android:padding="10dp"
                  android:background="@drawable/icon_selector"
                  android:textColor="@color/white"
                  android:layout_height="wrap_content"/>
        <TextView android:layout_width="wrap_content"
                  android:text="0"
                  android:visibility="invisible"
                  android:id="@+id/red_point"
                  android:background="@drawable/red_point"
                  android:textColor="@color/white"
                  android:gravity="center"
                  android:textSize="8dp"
                  android:layout_alignParentRight="true"
                  android:layout_height="wrap_content"
                  android:layout_marginRight="10dp"
                  android:layout_marginTop="10dp"
        />
    </RelativeLayout>
    <!--sevice and news-->
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="50dp"
                  android:orientation="horizontal">
        <TextView android:text="@string/service"
                  android:textColor="@color/light_blue"
                  android:layout_width="wrap_content"
                  android:layout_height="fill_parent"
                  android:gravity="center"
                  android:background="@drawable/icon_selector"
                  android:id="@+id/btn_service"
                  android:layout_weight="1"/>
        <TextView android:text="@string/news"
                  android:id="@+id/btn_news"
                  android:textColor="@color/light_blue"
                  android:layout_width="wrap_content"
                  android:layout_height="fill_parent"
                  android:background="@drawable/icon_selector"
                  android:gravity="center"
                  android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>