<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="@color/white"
              android:layout_height="match_parent">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout style="@style/detail_header">
            <TextView style="@style/header_text" android:text="找回密码"/>
        </LinearLayout>
        <Button style="@style/button_small" android:id="@+id/button_back" android:text="@string/back" android:layout_alignParentLeft="true" android:layout_marginLeft="10dp" android:layout_marginTop="10dp"/>
    </RelativeLayout>
    <LinearLayout style="@style/container">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp">
            <EditText style="@style/input_primary"
                      android:hint="@string/phone"
                      android:maxLength="11"
                      android:id="@+id/input_phone"
                      android:layout_marginBottom="10dp"
                      android:phoneNumber="true"/>
            <Button style="@style/button_small"
                    android:text="发送验证码"
                    android:alpha="0.5"
                    android:editable="true"
                    android:enabled="false"
                    android:id="@+id/button_sms"
                    android:layout_marginTop="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <LinearLayout android:layout_width="fill_parent" android:visibility="invisible" android:id="@+id/sms_wrap" android:orientation="vertical" android:layout_height="wrap_content">
            <EditText style="@style/input_primary"
                      android:hint="验证码"
                      android:maxLength="6"
                      android:id="@+id/input_sms"
                      android:layout_marginBottom="10dp"
                      android:numeric="integer"/>
            <Button style="@style/button_primary" android:alpha="0.5" android:enabled="false" android:id="@+id/button_ok" android:text="@string/ok"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>