<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:background="@color/white"
              android:layout_height="match_parent">
    <!--header-->
    <LinearLayout android:layout_width="fill_parent"
                  android:id="@+id/wrap_header"
                  android:layout_height="wrap_content">
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <!--detail header-->
            <LinearLayout style="@style/detail_header">
                <TextView style="@style/header_text" android:text="@string/message"/>
            </LinearLayout>
            <!--return button-->
            <Button  style="@style/button_small"
                     android:text="@string/back"
                     android:id="@+id/back"
                     android:layout_alignParentLeft="true"
                     android:layout_marginTop="10dp"
                     android:layout_marginLeft="10dp"/>
            <!--refresh button-->
            <Button
                    android:layout_alignParentRight="true"
                    android:id="@+id/edit"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/edit"
                    android:background="@drawable/button_selector"
                    style="@style/button_small"/>
        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout android:layout_width="fill_parent"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/border_bottom"
                    android:layout_height="fill_parent">
        <ListView android:layout_width="fill_parent"
                  android:id="@+id/listview"
                  android:divider="@color/light_gray"
                  android:dividerHeight="1dp"
                  android:layout_height="wrap_content">
        </ListView>
        <TextView android:layout_width="fill_parent"
                  android:textColor="@color/gray"
                  android:textSize="16dp"
                  android:id="@+id/no_record"
                  android:text="查看历史消息"
                  android:visibility="invisible"
                  android:gravity="center"
                  android:layout_height="fill_parent"/>
    </RelativeLayout>
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="40dp"
                  android:id="@+id/bottom_tool"
                  android:background="@drawable/border_top"
                  android:visibility="invisible"
                  android:layout_alignParentBottom="true"
                  android:orientation="horizontal">
        <Button android:layout_width="fill_parent"
                  android:text="全选"
                  android:textSize="14dp"
                  android:id="@+id/selectAll"
                  android:textColor="@color/blue"
                  android:gravity="center"
                  android:layout_weight="1"
                  android:background="@drawable/light_selector"
                  android:layout_height="fill_parent"/>
        <Button android:layout_width="fill_parent"
                  android:text="删除"
                  android:id="@+id/delete"
                  android:layout_weight="1"
                  android:textSize="14dp"
                  android:textColor="@color/gray"
                  android:gravity="center"
                  android:enabled="false"
                  android:background="@drawable/light_selector"
                  android:layout_height="fill_parent"/>
    </LinearLayout>
    <!--progressbar-->
    <LinearLayout android:layout_width="fill_parent"
                  android:id="@+id/progressBar"
                  android:layout_marginTop="50dp"
                  android:layout_below="@id/wrap_header"
                  android:gravity="center"
                  android:layout_height="wrap_content">
        <LinearLayout android:layout_width= "40dp"
                      android:gravity="center"
                      android:layout_gravity="center_horizontal"
                      android:background="@drawable/white_circle"
                      android:layout_height="40dp">
            <com.example.myapp.CircularProgress android:layout_width="20dp"
                                                android:layout_height="20dp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>